--- a/index.html
+++ b/index.html
@@ -246,30 +246,30 @@
           <div class="col-lg-3">
             <h5 class="mb-3">Company</h5>
             <ul class="list-unstyled mb-0">
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">About us</a></li>
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Contact us</a></li>
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">News and Blogs</a></li>
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Library</a></li>
-              <li><a href="#" class="text-muted text-decoration-none">Career</a></li>
+              <li>About us</a></li>
+              <li>Contact us</li>
+              <li>News and Blogs</li>
+              <li>Library</li>
+              <li></li>
             </ul>
           </div>
 
           <div class="col-lg-3">
             <h5 class="mb-3">Community</h5>
             <ul class="list-unstyled mb-0">
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Documentation</a></li>
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Faq</a></li>
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Forum</a></li>
-              <li><a href="#" class="text-muted text-decoration-none">Sitemap</a></li>
+              <li >Documentation</a></li>
+              <li >Faq</a></li>
+              <li >Forum</a></li>
+              <li></li>
             </ul>
           </div>
 
           <div class="col-lg-3">
             <h5 class="mb-3">Teaching</h5>
             <ul class="list-unstyled mb-4">
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">Become a teacher</a></li>
-              <li class="mb-2"><a href="#" class="text-muted text-decoration-none">How to guide</a></li>
-              <li><a href="#" class="text-muted text-decoration-none">Terms & Conditions</a></li>
+              <li>Become a teacher</a></li>
+              <li>How to guide</a></li>
+              <li>Terms & Conditions</a></li>
             </ul>
 
             <h5 class="mb-3">Contact</h5>
